# openmusica

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/api/: SpotifyClient.cpp  SpotifyClient.h
src/core/: App.cpp  App.h  ConfigManager.cpp  ConfigManager.h  MainWindow.cpp  MainWindow.h  SpotifyAuth.cpp  SpotifyAuth.h
src/ui/: HomeWidget.cpp  HomeWidget.h  LoginWidget.cpp  LoginWidget.h
